# genai-agentes

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
01-landscape/: 01-fundamentos.ipynb  02-agent-sdks.ipynb
02-create-agent/: 01-setup.ipynb  01-setup.py  02-create-agent.ipynb  03-tools.ipynb  04-agent-structured-outputs.ipynb
03-context/: 01-short_term_memory.ipynb  02-long_term_memory.ipynb  03-middleware-builtin.ipynb  04-middleware-custom.ipynb  05-rag.ipynb  06-mcp.ipynb  07-subagents.ipynb  docker-compose-chroma.yml  docker-compose-pgvector.yml  docker-compose-postgres.yml
04-proyecto/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
04-proyecto/app/: __init__.py  main.py
04-proyecto/app/agents/: __init__.py  rag.py  subagents.py  supervisor.py  tools.py
04-proyecto/app/api/v1/: router.py
04-proyecto/app/api/v1/endpoints/: admin.py  conversations.py  tickets.py  users.py
04-proyecto/app/core/: __init__.py  config.py  langchain.py
04-proyecto/app/schemas/: requests.py  responses.py
04-proyecto/app/services/: chat.py
04-proyecto/docs/: faq-soporte.md  manual-producto-nubis.md  politica-garantias.md
